--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ nav .fa-solid {
     }
     .nav-links {
         position: absolute;
-        background:#fffde2;
+        background:rgb(244, 244, 243);
         height: 100vh;
         width: 250px;
         top: 0;
