--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ html {
     min-height: 100vh;
     width: 100%;
     background-image: linear-gradient(rgba(7, 44, 196, 0.95), rgba(18, 39, 122, 0.8)), url(./images/hero-bg.jpg);
+    background-attachment: fixed;
     background-size: cover;
     background-position: center;
     position: relative;
