--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
 html {
     scroll-behavior: smooth;
 }
+body {
+    overflow: hidden;
+}
 
 /* Hero Section*/
 
@@ -144,7 +147,6 @@ nav .fa-solid {
     color: white;
     padding: 50px;
     position: absolute;
-    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scaleX(0);
