--- a/style.css
+++ b/style.css
@@ -8,9 +8,6 @@
 html {
     scroll-behavior: smooth;
 }
-/* body {
-    overflow: hidden;
-} */
 
 /* Hero Section*/
 
@@ -146,7 +143,7 @@ nav .fa-solid {
     background-size: cover;
     color: white;
     padding: 50px;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scaleX(0);
@@ -191,7 +188,10 @@ nav .fa-solid {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    transition: transform 300ms linear, outline-offset 1s linear, color 1s linear;
+    transition: transform 300ms linear;
+    position: sticky;
+    top: 0;
+    left: 0;
 }
 #mission .fa-circle-xmark:hover {
     transform: scale(0.9);
